Whitespace in inputs bug

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -97,6 +97,7 @@ li.task {
   
   .width-machine {
     visibility: hidden;
+    white-space: pre;
     padding: 0 5px;
     min-width: calc(1ch);
     display: inline-block;
